# pymodaq_plugins_mock

./: .gitignore  MANIFEST.in  README.rst  hatch_build.py  plugin_info.py  plugin_info.toml  pyproject.toml  setup.py
.github/workflows/: Test.yml  Testbase.yml  Testp310pyqt5.yml  python-publish.yml
documentation/: .~lock.list_plugins.ods#  changelog.rst  list_plugins.ods
pymodaq_plugins/: h5file.h5  version.py
pymodaq_plugins/daq_move_plugins/: __init__.py  daq_move_Conex.py  daq_move_Holoeye.py  daq_move_Kinesis.py  daq_move_Kinesis_Flipper.py  daq_move_Mock.py  daq_move_Newport_ESP100.py  daq_move_OrsaySTEM.py  daq_move_PI.py  daq_move_PI_MMC.py  daq_move_PiezoConcept.py  daq_move_PiezoConceptPI.py  daq_move_STEM.py  daq_move_SmarActMCS.py  daq_move_Spectro270M.py  daq_move_TCPServer.py
pymodaq_plugins/daq_viewer_plugins/plugins_0D/: __init__.py  daq_0Dviewer_AmplitudeSystemsCRC16.py  daq_0Dviewer_Keithley2110.py  daq_0Dviewer_Keithley_Pico.py  daq_0Dviewer_Kinesis_KPA101.py  daq_0Dviewer_LockIn7270.py  daq_0Dviewer_LockInSR830.py  daq_0Dviewer_Mock.py  daq_0Dviewer_MockAdaptive.py  daq_0Dviewer_NIDAQmx.py  daq_0Dviewer_TCPServer.py
pymodaq_plugins/daq_viewer_plugins/plugins_1D/: __init__.py  daq_1Dviewer_Labspec6TCP.py  daq_1Dviewer_LecroyWaverunner6Zi.py  daq_1Dviewer_Mock.py  daq_1Dviewer_MockAdaptive.py  daq_1Dviewer_Mock_externalh5.py  daq_1Dviewer_Mock_spectro.py  daq_1Dviewer_NIDAQmx.py  daq_1Dviewer_OceanOptics.py  daq_1Dviewer_Picoscope.py  daq_1Dviewer_Shamrock.py  daq_1Dviewer_TCPServer.py  daq_1Dviewer_TH260.py  daq_1Dviewer_TH260_histo.py  daq_1Dviewer_Tektronix.py
pymodaq_plugins/daq_viewer_plugins/plugins_2D/: __init__.py  daq_2Dviewer_AndorCCD.py  daq_2Dviewer_FLIM.py  daq_2Dviewer_GenICam.py  daq_2Dviewer_Mock.py  daq_2Dviewer_MockScanner.py  daq_2Dviewer_Mock_nav.py  daq_2Dviewer_OpenCVCam.py  daq_2Dviewer_OrsayCamera.py  daq_2Dviewer_OrsaySTEM.py  daq_2Dviewer_TCPServer.py  daq_2Dviewer_TCP_GRABBER.py  daq_2Dviewer_TH260_FLIM.py  daq_2Dviewer_TIS.py
pymodaq_plugins/daq_viewer_plugins/plugins_ND/: __init__.py  daq_NDviewer_FLIM.py  daq_NDviewer_Mock.py
pymodaq_plugins/hardware/NIDAQmx/: daq_NIDAQmx.py  daqmx.py
pymodaq_plugins/hardware/Newport/: esp100.py
pymodaq_plugins/hardware/PI/: MMC413.H  MMC413.c  MMC413.lib  mmc_wrapper.py
pymodaq_plugins/hardware/STEM/: OrsayCameraDevice.py  OrsayDevice.py  PythonScanDemo.py  orsaycamera.py  orsayscan.py  orsayscan_position.py
pymodaq_plugins/hardware/amplitude/: SY-3118.ini  amplitude_systems.py
pymodaq_plugins/hardware/andor/: _andorsdk.py  daq_AndorSDK2.py
pymodaq_plugins/hardware/horiba/: labspec6.py
pymodaq_plugins/hardware/keithley2110/: keithley.rules  keithley2110_VISADriver.py  readme.linux.md
pymodaq_plugins/hardware/picoquant/: histomode.out  histomode.py  timeharp260.py  tttrmode.py
pymodaq_plugins/hardware/piezoconcept/: piezo_test.py  piezoconcept.py  run_arbitrary.py
pymodaq_plugins/hardware/smaract/: smaract.py
src/pymodaq_plugins/daq_move_plugins/: __init__.py  daq_move_Mock.py  daq_move_MockCamera.py  daq_move_MockPID.py  daq_move_MockTau.py
src/pymodaq_plugins/hardware/: camera_wrapper.py  pid_controller.py  wrapper.py
src/pymodaq_plugins_mock/: __init__.py  utils.py
tests/: detectors_test.py  test_plugin_package_structure.py
(+309 files in other folders)
